# cgal-python-bindings

./: .gitignore  CMakeLists.txt  Dockerfile  GetMetadata.cmake.in  MANIFEST.in  README.md  bitbucket-pipelines.yml  build_command.sh  cgalpy_backend.py  cgalpy_epic.json  conanfile.txt  config.cmake  howto_package.md  pyproject.toml  requirements.txt  setup.py
src/: CMakeLists.txt
src/bench/: _square_swig.pyd  binding_bench.py  square.pyd
src/bench/function_call_bench/: Instructions.txt  binding_bench.py  results.txt  run  square_boost.pyd  square_swig.py
src/bench/function_call_bench/boost/: CMakeLists.txt  square_boost.cpp
src/bench/function_call_bench/nanobind/: CMakeLists.txt  square.cpp
src/bench/function_call_bench/pybind11/: CMakeLists.txt  square.cpp
src/bench/function_call_bench/swig/: CMakeLists.txt  square_swig.py
src/bench/max_cover_bench/: instructions.txt  max_cover.pyd  max_cover_pybind11.py
src/bench/max_cover_bench/boost/: max_cover.pyd  max_cover_boost.py
src/bench/max_cover_bench/pybind11/: max_cover.pyd  max_cover_pybind11.py  points1.txt  results.txt
src/bench/shared_ptr_bench/: boost_sp.pyd  results.txt  shared_ptr_bench.py  sp_pybind11.pyd
src/bench/shared_ptr_bench/boost/: CMakeLists.txt  sp_boost.cpp
src/bench/shared_ptr_bench/nanobind/: CMakeLists.txt  sp_nanobind.cpp
src/bench/shared_ptr_bench/pybind11/: CMakeLists.txt  sp.cpp
src/bench/shared_ptr_bench/swig/: CMakeLists.txt  sp.h  sp.i
src/binding_examples_boost/Arrangement_2 - edge insertion example - boost/: Arrangement_2 - edge insertion example - boost.sln
src/binding_examples_boost/Arrangement_2 - edge insertion example - boost/Arrangement_2 - edge insertion example - boost/: Arrangement_2 - edge insertion example - boost.vcxproj
src/binding_examples_boost/Polygon_2_boost/: Polygon_2.sln
src/binding_examples_boost/Polygon_2_boost/Polygon_2/: Polygon_2.cpp  Polygon_2.vcxproj  Polygon_2.vcxproj.filters
src/binding_examples_boost/boost_python_template/: boost_python_template.sln
src/binding_examples_boost/boost_python_template/boost_python_template/: boost_python_template.vcxproj
src/binding_examples_boost/boost_python_templated_class/: boost_python_templated_class.sln
src/binding_examples_boost/boost_python_templated_class/boost_python_templated_class/: boost_python_templated_class.vcxproj  boost_python_templated_class.vcxproj.filters
src/binding_examples_boost/dcel_extension - boost/: dcel_extension - boost.sln
src/binding_examples_boost/dcel_extension - boost/dcel_extension - boost/: dcel_extension - boost.vcxproj  dcel_extension - boost.vcxproj.filters
src/binding_examples_pybind11/Arrangement_2 - edge insertion example/Arrangement_2/: Arrangement_2.cpp  Arrangement_2.vcxproj
src/binding_examples_pybind11/Point_2_Simple_cartesian_int/: Point_2_Simple_cartesian_int.sln
src/binding_examples_pybind11/Segment_2_simple_cartesian_int/: Segment_2_simple_cartesian_int.sln
src/binding_examples_pybind11/dcel_extension - pybind11/: dcel_extension - pybind11.sln
src/binding_examples_pybind11/pybind11_Point_2_simple_cartesian_int/: pybind11_Point_2_simple_cartesian_int.sln
src/binding_examples_pybind11/pybind11_Segment_2/: pybind11_Segment_2.sln
src/binding_examples_pybind11/pybind11_polygon_EPIEC/: pybind11_polygon_EPIEC.sln
src/binding_examples_pybind11/pybind11_template/: pybind11_template.sln
src/figs/: aos_open_concept.tex
src/libs/: CMakeLists.txt
src/libs/arr2_epec_seg/: CMakeLists.txt
src/libs/arr_2-ecep-seg/: CMakeLists.txt
src/libs/cgalpy/: CMakeLists.txt  Doxyfile.in  README.rst  __init__.py  config.hpp.in  setup.py  setup.py.in
src/libs/shared_vector/: CMakeLists.txt
src/libs/tri3/: CMakeLists.txt
src/libs/triangulations/: CMakeLists.txt
src/python projects/import_polygon/: Polygon_2-boost-bind.pyd  Polygon_2.pyd  import_polygon.py  input.txt  input2.txt  input3.txt  maxAreas.db.pickle
src/python_scripts/: arr2.py  arr2_fixed.py  arrangement.py  as3_del_compact_epic.py  as3_delaunay_fast_location.py  as3_exact_del_compact_epic.py  as3_reg_compact_epic.py  as3_regular.py  as_delaunay.py  as_delaunay_exact.py  compare_all.sh  compare_completed.sh  compare_examples.sh  configure_index.py  find_and_run_all.sh  gen_setup.py  implicit_stubs.py  kd_tree.py  kernel.py  move_release_to_test.py  overlay.py  point_location.py  simple.py  test_pmp.py  tri3_del.py  vertical_decomposition.py  zone_test.py
src/python_scripts/cgalpy_demos/: arrangement_demo.py  gui_demo.py  ms_demo.py  overlay_demo.py  prerequisites.txt  readme.md
src/python_scripts/cgalpy_examples/: .gitignore  aos2.py  aos2_algebraic_curves.py  aos2_cs.py  aos2_fex.py  approx_inset.py  arr2.py  arr2_fex.py  arr_algebraic_curves.py  as3_del_compact_epic.py  as3_del_fast_epic.py  as3_exact_del_compact_epic.py  as3_reg_compact_epic.py  circle_segment.py  circle_segment_polygons.py  compare_examples.py  compare_to_cpp.sh  conic_traits_adapter.py  epic.py  extended_overlay.py  find_and_run.sh  hash.py  kd_tree.py  ker_intersection.py  kerd_do_intersect.py  kernel.py  kernel_d_do_intersect.py  kernel_intersection.py  overlay.py  overlay_cs.py  point_location.py  readme.md  readme.txt  run  run_all  safety_precondition_notes.md  sequence.py  simple_join_intersect.py  sum_by_decomposition.py  test_stubs.py  (+4 more)
src/python_scripts/precompiled/: CGALPY.py  CGALPY_kerEpec_arr2AlgEx.pyd  CGALPY_kerEpic_as3PlainExa_pol2_tri3DelAsAsComSeq.pyd  CGALPY_kerEpic_as3Plain_pol2_tri3DelAsAsComSeq.pyd  CGALPY_kerEpic_as3Plain_pol2_tri3DelAsAsFasSeq.pyd  CGALPY_kerEpic_as3Plain_pol2_tri3RegAsrAsrComSeq.pyd  CGALPY_kerEpic_pol2_tri3DelAsAsComSeq.pyd
src/scope_test/: CMakeLists.txt
src/scope_test/src/: bindings.cpp
src/scripts/: .gitignore  choose_and_compile.sh  compile_for_examples.sh  cpp_docstrings_from_json.py  cpp_docstrings_from_json.py.bak  generate_yml.py  json_from_doc_output.py  json_from_xml.py  run  run2.sh
src/scripts/example2cmake/: cmake2example.txt  example2cmake.py  example2cmake.txt  ker2cmake.py  kernel2cmake.txt  reverse_dict.py
(+1751 files in other folders)
