[build-system]
requires = [
    "conan>=2.0.0",
    "setuptools",
    "scikit-build>=0.13",
    "cmake>=3.26",
    "ninja",
    "scikit-build-core >=0.4.3",
    "nanobind>=1.3.2"
]
build-backend = "scikit_build_core.build"
[project]
name = "cgalpy"
version = "1.0.4"
description = "CGAL Bindings"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "radekaadek", email = "radekaadek@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
]
# Optional: runtime dependency specification
# dependencies = [ "cryptography >=41.0" ]
[project.urls]
# Homepage = "https://bitbucket.org/taucgl/cgal-python-bindings/src/master/"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
manylinux-x86_64-image = "radekaadek/cgalpy-manylinux_2_28_x86_64_image:v11"
manylinux-aarch64-image = "radekaadek/cgalpy-manylinux_2_28_aarch64_image:v4"
# manylinux-ppc64le-image = "radekaadek/cgalpy-manylinux_2_28_ppc64le_image:v4"
# manylinux-s390x-image = "radekaadek/cgalpy-manylinux_2_28_s390x_image:v4"
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
# before-build = "wget https://github.com/CGAL/cgal/archive/refs/tags/v6.0-beta1.tar.gz && tar -xvf v6.0-beta1.tar.gz"

# environment = {CGAL_DIR="/project/cgal-6.0-beta1", nanobind_DIR="/project/nanobind", CGALPY_PYPI="1", PATH="/project/nanobind/include:$PATH"}

environment = {nanobind_DIR="/project/nanobind", CGALPY_PYPI="1", PATH="/project/nanobind/include:$PATH"}
